--- a/nbs/cluster_analysis.ipynb
+++ b/nbs/cluster_analysis.ipynb
@@ -26,7 +26,7 @@
     "\n",
     "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
     "colours = prop_cycle.by_key()['color']\n",
-    "colours\n"
+    "colours"
    ]
   },
   {
@@ -2224,9 +2224,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "copd-paper",
+   "display_name": "Python [conda env:copd-paper]",
    "language": "python",
-   "name": "copd-paper"
+   "name": "conda-env-copd-paper-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2238,7 +2238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
