--- a/tex/comparison.tex
+++ b/tex/comparison.tex
@@ -1,11 +1,19 @@
-\begin{tabular}{lrrrrrrrrrrrrr}
+\begin{tabular}{llrrrr}
 \toprule
-{} & \multicolumn{6}{l}{Model characteristic} & \multicolumn{7}{l}{LOS statistic} \\
-{} &              \(p_0\) & \(p_1\) & \(p_2\) & \(p_3\) & \(c\) & Max. distance &          Mean &   Std. &    Min. &     25\% &    Med. &     75\% &    Max. \\
+              &      &  Observed &  Best simulated &  Median simulated &  Worst simulated \\
 \midrule
-Observed         &                  NaN &     NaN &     NaN &     NaN &   NaN &      0.000000 &          7.70 &  11.86 &   -0.02 &    1.49 &    4.20 &    8.93 &  224.93 \\
-Best simulated   &                  1.0 &     0.5 &    0.75 &     1.0 &  30.0 &      4.145915 &          6.26 &  11.96 &    0.00 &    1.08 &    2.66 &    5.92 &  187.16 \\
-Median simulated &                  0.5 &     0.5 &    0.50 &     0.5 &  40.0 &     13.306859 &          4.79 &   8.99 &    0.00 &    0.73 &    1.88 &    4.25 &  101.30 \\
-Worst simulated  &                  1.0 &     1.0 &    1.00 &     0.5 &  20.0 &    347.283289 &        297.66 &  82.99 &  131.13 &  231.59 &  301.46 &  367.43 &  496.33 \\
+Model characteristic & \(p_0\) &       NaN &            1.00 &              0.50 &             1.00 \\
+              & \(p_1\) &       NaN &            0.50 &              0.50 &             1.00 \\
+              & \(p_2\) &       NaN &            0.75 &              0.50 &             1.00 \\
+              & \(p_3\) &       NaN &            1.00 &              0.50 &             0.50 \\
+              & \(c\) &       NaN &           30.00 &             40.00 &            20.00 \\
+              & Max. distance &      0.00 &            4.15 &             13.31 &           347.28 \\
+LOS statistic & Mean &      7.70 &            6.26 &              4.79 &           297.66 \\
+              & Std. &     11.86 &           11.96 &              8.99 &            82.99 \\
+              & Min. &     -0.02 &            0.00 &              0.00 &           131.13 \\
+              & 25\% &      1.49 &            1.08 &              0.73 &           231.59 \\
+              & Med. &      4.20 &            2.66 &              1.88 &           301.46 \\
+              & 75\% &      8.93 &            5.92 &              4.25 &           367.43 \\
+              & Max. &    224.93 &          187.16 &            101.30 &           496.33 \\
 \bottomrule
 \end{tabular}
