Make rows bold in comparison table.

--- a/tex/comparison.tex
+++ b/tex/comparison.tex
@@ -2,18 +2,18 @@
 \toprule
               &      &  Observed &  Best simulated &  Median simulated &  Worst simulated \\
 \midrule
-Model characteristic & \(p_0\) &       NaN &            1.00 &              0.50 &             1.00 \\
-              & \(p_1\) &       NaN &            0.50 &              0.50 &             1.00 \\
-              & \(p_2\) &       NaN &            0.75 &              0.50 &             1.00 \\
-              & \(p_3\) &       NaN &            1.00 &              0.50 &             0.50 \\
-              & \(c\) &       NaN &           30.00 &             40.00 &            20.00 \\
-              & Max. distance &      0.00 &            4.15 &             13.31 &           347.28 \\
-LOS statistic & Mean &      7.70 &            6.26 &              4.79 &           297.66 \\
-              & Std. &     11.86 &           11.96 &              8.99 &            82.99 \\
-              & Min. &     -0.02 &            0.00 &              0.00 &           131.13 \\
-              & 25\% &      1.49 &            1.08 &              0.73 &           231.59 \\
-              & Med. &      4.20 &            2.66 &              1.88 &           301.46 \\
-              & 75\% &      8.93 &            5.92 &              4.25 &           367.43 \\
-              & Max. &    224.93 &          187.16 &            101.30 &           496.33 \\
+\textbf{Model characteristic} & \textbf{\(p_0\)} &       NaN &            1.00 &              0.50 &             1.00 \\
+              & \textbf{\(p_1\)} &       NaN &            0.50 &              0.50 &             1.00 \\
+              & \textbf{\(p_2\)} &       NaN &            0.75 &              0.50 &             1.00 \\
+              & \textbf{\(p_3\)} &       NaN &            1.00 &              0.50 &             0.50 \\
+              & \textbf{\(c\)} &       NaN &           30.00 &             40.00 &            20.00 \\
+              & \textbf{Max. distance} &      0.00 &            4.15 &             13.31 &           347.28 \\
+\textbf{LOS statistic} & \textbf{Mean} &      7.70 &            6.26 &              4.79 &           297.66 \\
+              & \textbf{Std.} &     11.86 &           11.96 &              8.99 &            82.99 \\
+              & \textbf{Min.} &     -0.02 &            0.00 &              0.00 &           131.13 \\
+              & \textbf{25\%} &      1.49 &            1.08 &              0.73 &           231.59 \\
+              & \textbf{Med.} &      4.20 &            2.66 &              1.88 &           301.46 \\
+              & \textbf{75\%} &      8.93 &            5.92 &              4.25 &           367.43 \\
+              & \textbf{Max.} &    224.93 &          187.16 &            101.30 &           496.33 \\
 \bottomrule
 \end{tabular}
