--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -1272,7 +1272,7 @@
     "    ]\n",
     ")\n",
     "\n",
-    "string = to_latex.to_latex().replace(\"\\\\textbackslash \", \"\\\\\").replace(\"\\\\_\", \"_\")\n",
+    "string = to_latex.to_latex(bold_rows=True).replace(\"\\\\textbackslash \", \"\\\\\").replace(\"\\\\_\", \"_\")\n",
     "with open(\"../tex/comparison.tex\", \"w\") as f:\n",
     "    f.write(string)\n",
     "\n",
@@ -1287,7 +1287,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fcadd8a49d0>"
+       "<matplotlib.legend.Legend at 0x7ffd072d25d0>"
       ]
      },
      "execution_count": 19,
