Add in new wasserstein figures and comparison tab

--- a/nbs/wasserstein.ipynb
+++ b/nbs/wasserstein.ipynb
@@ -308,7 +308,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"../data/new_wasserstein/main.csv\")\n",
+    "df = pd.read_csv(\"../data/wasserstein/main.csv\")\n",
     "df.head()"
    ]
   },
@@ -341,7 +341,7 @@
     }
    ],
    "source": [
-    "with open(\"../data/new_wasserstein/best/params.txt\", \"r\") as f:\n",
+    "with open(\"../data/wasserstein/best/params.txt\", \"r\") as f:\n",
     "    params = list(map(float, f.read().split(\" \")))\n",
     "    best_ps = params[:n_clusters]\n",
     "    best_c = int(params[n_clusters])\n",
@@ -520,7 +520,7 @@
     }
    ],
    "source": [
-    "best_df = pd.read_csv(\"../data/new_wasserstein/best/main.csv\")\n",
+    "best_df = pd.read_csv(\"../data/wasserstein/best/main.csv\")\n",
     "best_df.head()"
    ]
   },
@@ -568,7 +568,7 @@
     "ax.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"../img/best_params.pdf\", transparent=True)"
+    "plt.savefig(\"../img/best_params.pdf\", transparent=True)"
    ]
   },
   {
@@ -593,7 +593,7 @@
     }
    ],
    "source": [
-    "with open(\"../data/new_wasserstein/median/params.txt\", \"r\") as f:\n",
+    "with open(\"../data/wasserstein/median/params.txt\", \"r\") as f:\n",
     "    params = list(map(float, f.read().split(\" \")))\n",
     "    median_ps = params[:n_clusters]\n",
     "    median_c = int(params[n_clusters])\n",
@@ -772,7 +772,7 @@
     }
    ],
    "source": [
-    "median_df = pd.read_csv(\"../data/new_wasserstein/median/main.csv\")\n",
+    "median_df = pd.read_csv(\"../data/wasserstein/median/main.csv\")\n",
     "median_df.head()"
    ]
   },
@@ -811,7 +811,7 @@
     "ax.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"../img/median_params.pdf\", transparent=True)"
+    "plt.savefig(\"../img/median_params.pdf\", transparent=True)"
    ]
   },
   {
@@ -836,7 +836,7 @@
     }
    ],
    "source": [
-    "with open(\"../data/new_wasserstein/worst/params.txt\", \"r\") as f:\n",
+    "with open(\"../data/wasserstein/worst/params.txt\", \"r\") as f:\n",
     "    params = list(map(float, f.read().split(\" \")))\n",
     "    worst_ps = params[:n_clusters]\n",
     "    worst_c = int(params[n_clusters])\n",
@@ -1015,7 +1015,7 @@
     }
    ],
    "source": [
-    "worst_df = pd.read_csv(\"../data/new_wasserstein/worst/main.csv\")\n",
+    "worst_df = pd.read_csv(\"../data/wasserstein/worst/main.csv\")\n",
     "worst_df.head()"
    ]
   },
@@ -1053,7 +1053,7 @@
     "ax.legend()\n",
     "\n",
     "plt.tight_layout()\n",
-    "# plt.savefig(\"../img/worst_params.pdf\", transparent=True)"
+    "plt.savefig(\"../img/worst_params.pdf\", transparent=True)"
    ]
   },
   {
@@ -1262,9 +1262,9 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# string = to_latex.to_latex(bold_rows=True).replace(\"\\\\textbackslash \", \"\\\\\").replace(\"\\\\_\", \"_\")\n",
-    "# with open(\"../tex/comparison.tex\", \"w\") as f:\n",
-    "#     f.write(string)\n",
+    "string = to_latex.to_latex(bold_rows=True).replace(\"\\\\textbackslash \", \"\\\\\").replace(\"\\\\_\", \"_\")\n",
+    "with open(\"../tex/comparison.tex\", \"w\") as f:\n",
+    "    f.write(string)\n",
     "\n",
     "to_latex"
    ]
@@ -1277,7 +1277,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f92aaceb090>"
+       "<matplotlib.legend.Legend at 0x7fb6f890f550>"
       ]
      },
      "execution_count": 19,
