Clean up all notebooks.

--- a/nbs/archive_data.ipynb
+++ b/nbs/archive_data.ipynb
@@ -42,7 +42,8 @@
    "outputs": [],
    "source": [
     "def synthesise_column(data, column_to_synthesise, column_name, seed=0):\n",
-    "    \"\"\" Synthesise a column via KDE and a clustering. Return the artificial dataset. \"\"\"\n",
+    "    \"\"\"Synthesise a column via KDE and a clustering. Return the artificial\n",
+    "    dataset.\"\"\"\n",
     "\n",
     "    dfs = []\n",
     "    for cluster, values in data.groupby(\"cluster\")[column_to_synthesise]:\n",
@@ -386,7 +387,9 @@
    ],
    "source": [
     "trimmed_diffs = synth_diffs[synth_diffs[\"diff\"] >= 0]\n",
-    "pd.concat((diffs[\"true_diff\"].describe(), trimmed_diffs[\"diff\"].describe()), axis=1)"
+    "pd.concat(\n",
+    "    (diffs[\"true_diff\"].describe(), trimmed_diffs[\"diff\"].describe()), axis=1\n",
+    ")"
    ]
   },
   {
@@ -408,9 +411,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "copd-paper",
+   "display_name": "Python [conda env:copd-paper]",
    "language": "python",
-   "name": "copd-paper"
+   "name": "conda-env-copd-paper-py"
   },
   "language_info": {
    "codemirror_mode": {
