--- a/nbs/cluster_analysis.ipynb
+++ b/nbs/cluster_analysis.ipynb
@@ -18,14 +18,13 @@
    ],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "%matplotlib inline\n",
     "plt.style.use(\"seaborn-colorblind\")\n",
     "\n",
-    "prop_cycle = plt.rcParams['axes.prop_cycle']\n",
-    "colours = prop_cycle.by_key()['color']\n",
+    "prop_cycle = plt.rcParams[\"axes.prop_cycle\"]\n",
+    "colours = prop_cycle.by_key()[\"color\"]\n",
     "colours"
    ]
   },
@@ -92,9 +91,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "knee_results = pd.read_csv(\"../data/clusters/knee_results.csv\", header=None).set_index(\n",
-    "    0\n",
-    ")\n",
+    "knee_results = pd.read_csv(\n",
+    "    \"../data/clusters/knee_results.csv\", header=None\n",
+    ").set_index(0)\n",
     "with open(\"../data/clusters/n_clusters.txt\", \"r\") as f:\n",
     "    n_clusters = int(f.read())"
    ]
@@ -126,7 +125,9 @@
     "ax.vlines(n_clusters, *ylims)\n",
     "\n",
     "ax.set(\n",
-    "    xlabel=\"Number of clusters\", ylabel=\"Final cost\", ylim=ylims,\n",
+    "    xlabel=\"Number of clusters\",\n",
+    "    ylabel=\"Final cost\",\n",
+    "    ylim=ylims,\n",
     ")\n",
     "\n",
     "plt.tight_layout()\n",
@@ -191,9 +192,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def histograms(data, column, group=\"cluster\", density=True, colours=colours, bins=11):\n",
+    "def histograms(\n",
+    "    data, column, group=\"cluster\", density=True, colours=colours, bins=11\n",
+    "):\n",
     "\n",
-    "    fig, axes = plt.subplots(ncols=2, nrows=2, dpi=200, sharex=True, sharey=True)\n",
+    "    fig, axes = plt.subplots(\n",
+    "        ncols=2, nrows=2, dpi=200, sharex=True, sharey=True\n",
+    "    )\n",
     "    axes = axes.reshape(4)\n",
     "\n",
     "    column_labels = {\n",
@@ -542,7 +547,9 @@
     "    proportions = values.value_counts(normalize=True).sort_index()\n",
     "    dfs.append(\n",
     "        pd.DataFrame(\n",
-    "            data=proportions.values, index=proportions.index, columns=[intervention]\n",
+    "            data=proportions.values,\n",
+    "            index=proportions.index,\n",
+    "            columns=[intervention],\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -1187,7 +1194,9 @@
     "    proportions = values.value_counts(normalize=True).sort_index()\n",
     "    dfs.append(\n",
     "        pd.DataFrame(\n",
-    "            data=proportions.values, index=proportions.index, columns=[intervention]\n",
+    "            data=proportions.values,\n",
+    "            index=proportions.index,\n",
+    "            columns=[intervention],\n",
     "        )\n",
     "    )\n",
     "\n",
@@ -1386,7 +1395,9 @@
     "characteristic_to_func = {\n",
     "    \"Percentage of spells\": lambda data: (len(data) / total_spells) * 100,\n",
     "    \"Mean spell cost, £\": lambda data: data[\"spell_cost\"].mean(),\n",
-    "    \"Percentage of recorded costs\": lambda data: (data[\"spell_cost\"].sum() / total_cost)\n",
+    "    \"Percentage of recorded costs\": lambda data: (\n",
+    "        data[\"spell_cost\"].sum() / total_cost\n",
+    "    )\n",
     "    * 100,\n",
     "    \"Median age\": lambda data: data[\"age\"].median(),\n",
     "    \"Minimum LOS\": lambda data: data[\"true_los\"].min(),\n",
@@ -1656,7 +1667,9 @@
     }
    ],
    "source": [
-    "cluster_intervention_proportions = pd.DataFrame(columns=[0, 1, 2, 3, \"Population\"])\n",
+    "cluster_intervention_proportions = pd.DataFrame(\n",
+    "    columns=[0, 1, 2, 3, \"Population\"]\n",
+    ")\n",
     "\n",
     "cluster_intervention_proportions[\"Population\"] = (\n",
     "    copd[\"intervention\"].value_counts(normalize=True) * 100\n",
@@ -1670,7 +1683,8 @@
     "    cluster_intervention_proportions[cluster] = proportions * 100\n",
     "\n",
     "new_index = [\n",
-    "    intervention_labels.get(i) + \", %\" for i in cluster_intervention_proportions.index\n",
+    "    intervention_labels.get(i) + \", %\"\n",
+    "    for i in cluster_intervention_proportions.index\n",
     "]\n",
     "cluster_intervention_proportions.index = new_index\n",
     "\n",
@@ -1693,7 +1707,9 @@
     "for label, data in cluster_conditions.items():\n",
     "    overall_condition[label] = data.mean() * 100\n",
     "\n",
-    "overall_condition[\"Population\"] = pd.concat(cluster_conditions.values()).mean() * 100\n",
+    "overall_condition[\"Population\"] = (\n",
+    "    pd.concat(cluster_conditions.values()).mean() * 100\n",
+    ")\n",
     "overall_condition = overall_condition.sort_values(\"Population\", ascending=False)\n",
     "\n",
     "condition_labels = {\n",
@@ -1720,7 +1736,9 @@
     "    \"sepsis\": \"Sepsis\",\n",
     "}\n",
     "\n",
-    "overall_condition.index = [condition_labels[i] + \", %\" for i in overall_condition.index]"
+    "overall_condition.index = [\n",
+    "    condition_labels[i] + \", %\" for i in overall_condition.index\n",
+    "]"
    ]
   },
   {
@@ -2187,7 +2205,11 @@
    ],
    "source": [
     "summary = pd.concat(\n",
-    "    [overall_characteristics.T, cluster_intervention_proportions, overall_condition],\n",
+    "    [\n",
+    "        overall_characteristics.T,\n",
+    "        cluster_intervention_proportions,\n",
+    "        overall_condition,\n",
+    "    ],\n",
     "    sort=False,\n",
     ").round(2)\n",
     "\n",
