Remove spacing from top of moving tables.

--- a/nbs/scenarios.ipynb
+++ b/nbs/scenarios.ipynb
@@ -627,7 +627,11 @@
     "    pivot = get_percentage_pivot(changes, column, dps)\n",
     "\n",
     "    if filename is not None:\n",
-    "        pivot.to_latex(f\"../tex/{filename}.tex\", bold_rows=True, escape=False)\n",
+    "        latex = pivot.to_latex(bold_rows=True, escape=False)\n",
+    "        latex = latex.replace(\"& {} \\\\\\\\\\n\", \"\")\n",
+    "\n",
+    "        with open(f\"../tex/{filename}.tex\", \"w\") as f:\n",
+    "            f.write(latex)\n",
     "\n",
     "    return pivot"
    ]
