Change `Update` algorithm label.

--- a/tex/kprototypes.tex
+++ b/tex/kprototypes.tex
@@ -1,5 +1,5 @@
 \balg%
-    \caption{\textsc{Update} (\(k\)-prototypes)}\label{alg:update}
+    \caption{\textsc{Update} (\(k\)-prototypes)}\label{alg:kprototypes_update}
     \KwIn{%
         an attribute space \(%
             \mathcal A = \mathcal A^{(n)} \times \mathcal A^{(c)}
