Move to JORS style file.

--- a/submissions/ejor/main.tex
+++ b/submissions/ejor/main.tex
@@ -298,7 +298,7 @@ generally~\cite{Fitzpatrick2019}. When considering issues with reproducibility
 in scientific computing (simulation included), the source of any concerns is
 often with the software used~\cite{Ivie2018}. Using well-developed, open-source
 software can alleviate issues around reproducibility and reliability as how they
-are used involve less uncertainty and require more rigour than ‘drag-and-drop’
+are used involve less uncertainty and require more rigour than `drag-and-drop'
 software. One example of such a piece of software is Ciw~\cite{Palmer2019}. Ciw
 is a discrete event simulation library written in Python that is fully
 documented and tested. The simulations constructed and studied in
